cluster/overlays/zahariev.com/calibre/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: calibre
spec:
  rules:
  - host: calibre.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre
            port:
              number: 8081
  tls:
  - hosts:
    - calibre.zahariev.com
    secretName: calibre-tls
